# High-Precision-IMU-Module-Usage-Tutorial

./: High-precision IMU Attitude Sensor Usage Tutorial.md  README.md
IMU_ROS1/IMU_Library/: README.md
IMU_ROS1/IMU_Library/IMU_Library/: imu_calibration_tool.py
IMU_ROS1/IMU_Library/IMU_Library.egg-info/: SOURCES.txt  requires.txt  top_level.txt
IMU_ROS1/IMU_ROS1/: CMakeLists.txt  package.xml
IMU_ROS1/IMU_ROS1/.marscode/: deviceInfo.json
IMU_ROS1/IMU_ROS1/rviz/: imu.rviz
IMU_ROS1/IMU_ROS1/scripts/: imu_driver.py
IMU_ROS1/launch/: imu_display.launch
IMU_ROS1/scripts/: mag_visualizer.py
IMU_ROS2/IMU_Library/IMU_Library/: IMU_visualization.py
IMU_ROS2/IMU_Library/IMU_Library.egg-info/: SOURCES.txt
IMU_ROS2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
IMU_ROS2/src/imu_ros2/: CMakeLists.txt  README.md  setup.cfg  setup.py
IMU_ROS2/src/imu_ros2/rviz/: imu_config.rviz
Multi-master communication case/: CH341 Driver Installation.md  Remote File Transfer.md  Serial&I2C Communication Protocol.xlsx
Multi-master communication case/IIC Communication/: Arduino.md  Jetson Series.md  RDK Series.md  Raspberry Pi 5.md
Multi-master communication case/IIC Communication/Arduino/: Arduino.rar
Multi-master communication case/IIC Communication/STM32 F103C8T6/: STM32 F103C8T6.md
Multi-master communication case/PC Communication/: PC Communication.md
Multi-master communication case/Serial Communication/: Jetson Series.md  RDK Series.md  Raspberry Pi 5 .md
ROS Application Cases/: ROS1 Application.md  ROS2 Application.md
(+19 files in other folders)
